--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,15 +8,91 @@
     <title>New Year New Me</title>
     <link rel="stylesheet" href="styles/style.css">
 </head>
+
 <body>
-    <header>
+    <section class="banner-all">
+        <div class="banner">
+            <h1 class="banner-name">All Thinks Are <br> Possible If You <br> believe</h1>
+            <p class="banner-about">There are many variations of passages of Lorem Ipsum <br> available, but the
+                majority
+                have suffered alteration in some <br> form, by injected humour, or randomised words</p>
+            <button class="btn-primary">
+                <h1>Contact Us</h1>
+            </button>
 
-    </header>
-    <main>
+        </div>
+    </section>
+    <!-- failure section -->
+    <section class="failure-reason">
+        <div class="image">
+            <img src="/styles/images/person.png" alt="">
+        </div>
+        <div class="failure-all-about">
+            <h3 class="title">My failures of previous year</h3>
+            <p class="failure-description">Contrary to popular belief, Lorem Ipsum is not <br> simply random text. It has roots in a piece of <br> classical Latin literature from 45 BC, making it over <br> 2000 years old. Richard McClintock.</p>
+            <div class="pera">
+                <p class="failure-description"> <span class="right-mark">✔</span>Contrary to popular belief, is not simply. </p>
+                <p class="failure-description"> <span class="right-mark">✔</span>Contrary to popular belief. </p>
+                <p class="failure-description"> <span class="right-mark">✔</span>Contrary to popular , is not simply. </p>
+                <p class="failure-description"> <span class="right-mark">✔</span>Contrary to popular belief, is not simply. </p>
+                <p class="failure-description"> <span class="right-mark">✔</span>Contrary to popular simply. </p>
+            </div>
+        </div>
+    </section>
+    <!-- My plans -->
+    <section class="my-plans">
+        <h3 class="plan-title">My Plans</h3>
+        <div class="plan-about">
+            <div class="all-plans">
+                <img src="/styles/images/icons/web.png" alt="">
+                <h5 class="plan-name">Web Development</h5>
+                <p class="plan-description">I want to start</p>
+            </div>
+            <div class="all-plans">
+                <img src="/styles/images/icons/js.png" alt="">
+                <h5 class="plan-name">Java Development</h5>
+                <p class="plan-description">I want to learn</p>
+            </div>
+            <div class="all-plans">
+                <img src="/styles/images/icons/smoke.png" alt="">
+                <h5 class="plan-name">Smoking Habit</h5>
+                <p class="plan-description">I want to end</p>
+            </div>
+            <div class="all-plans">
+                <img src="/styles/images/icons/ecom.png" alt="">
+                <h5 class="plan-name">Ecommerce</h5>
+                <p class="plan-description">I want to develop</p>
+            </div>
 
-    </main>
-    <footer>
-
-    </footer>
+            
+        </div>
+    </section>
+    <!-- image section -->
+    <section class="picture">
+        <div class="contact-now">
+            <h4 class="image-head">Always keep a positive <br>mindset</h4>
+            <button class="call-btn">Call Now</button>
+        </div>
+    </section>
+    <!-- footer about -->
+    <section class="footer-all">
+        <div class="footer">
+            <h3 class="footer-name">Future</h3>
+            <p class="footer-description">There are many variations of passages of Lorem Ipsum <br>available, but the majority have suffered alteration in some <br> form, by injected humour, or randomised words </p>
+            <p class="footer-description">email : info@gmail.com</p>
+            <p class="footer-description">Phone : 03955325</p>
+            <div class="icons">
+                <div> <img src="/styles/images/icons/fb.png" alt=""> </div>
+                <div> <img src="/styles/images/icons/twitter.png" alt=""> </div>
+                <div> <img src="/styles/images/icons/youtube.png" alt=""> </div>
+            </div>
+        </div>
+        <div class="form">
+            <h5 class="title-in">Subscribe</h5>
+            <input type="text" name="" id="box" placeholder="enter your email">
+            <br>
+            <button class="footer-btn">subscribe</button>
+        </div>
+    </section>
 </body>
 </html>
