--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <!-- failure section -->
     <section class="failure-reason">
         <div class="image">
-            <img src="/styles/images/person.png" alt="">
+            <img src="images/person.png" alt="">
         </div>
         <div class="failure-all-about">
             <h3 class="title">My failures of previous year</h3>
@@ -44,22 +44,22 @@
         <h3 class="plan-title">My Plans</h3>
         <div class="plan-about">
             <div class="all-plans">
-                <img src="/styles/images/icons/web.png" alt="">
+                <img src="images/icons/web.png" alt="">
                 <h5 class="plan-name">Web Development</h5>
                 <p class="plan-description">I want to start</p>
             </div>
             <div class="all-plans">
-                <img src="/styles/images/icons/js.png" alt="">
+                <img src="images/icons/js.png" alt="">
                 <h5 class="plan-name">Java Development</h5>
                 <p class="plan-description">I want to learn</p>
             </div>
             <div class="all-plans">
-                <img src="/styles/images/icons/smoke.png" alt="">
+                <img src="images/icons/smoke.png" alt="">
                 <h5 class="plan-name">Smoking Habit</h5>
                 <p class="plan-description">I want to end</p>
             </div>
             <div class="all-plans">
-                <img src="/styles/images/icons/ecom.png" alt="">
+                <img src="images/icons/ecom.png" alt="">
                 <h5 class="plan-name">Ecommerce</h5>
                 <p class="plan-description">I want to develop</p>
             </div>
@@ -82,9 +82,9 @@
             <p class="footer-description">email : info@gmail.com</p>
             <p class="footer-description">Phone : 03955325</p>
             <div class="icons">
-                <div> <img src="/styles/images/icons/fb.png" alt=""> </div>
-                <div> <img src="/styles/images/icons/twitter.png" alt=""> </div>
-                <div> <img src="/styles/images/icons/youtube.png" alt=""> </div>
+                <div> <img src="images/icons/fb.png" alt=""> </div>
+                <div> <img src="images/icons/twitter.png" alt=""> </div>
+                <div> <img src="images/icons/youtube.png" alt=""> </div>
             </div>
         </div>
         <div class="form">
